feat: upgrade samples to GPT-5.6 Luna and latest SDKs
Disable reasoning for Azure chat requests, retain keyless authentication, and align current Java SDK versions across all samples.

Upgrade Foundry Local, add regression tests, update setup documentation, and validate Azure and local inference workflows.